# shaypado-back

./: Makefile  README.md  pyproject.toml
shaypado_back/: app.py
